public/css/style.css
/* ... */
#title {
    margin: 3rem;
    padding-top: 3em;
    height: calc(var(--first-layer-height) / 2.5);
    padding-left: 10%;
}

em {
    font-style: normal;
    background: var(--color-gradient);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent;
    background-clip: text;
}

#photoGrid {
    max-width: calc(var(--img-width) * 5 + 75px);
    height: var(--first-layer-height);
    margin: 2rem 2rem;
    position: relative;
    display: flex;
    overflow: hidden;
}

#photoGrid img {
    background-color: rgb(184, 184, 184);
    max-width: 100%;
    border-radius: 9px;
    object-fit: cover;
    object-position: center;
    height: 100%;
    flex-grow: 1;
    transition: 250ms;
    position: absolute;
}

#photoGrid img:not(.selected) {
    transform: translateX(100%);
}

#photoGrid .indicators {
    gap: 6px;
    display: flex;
    position: absolute;
    bottom: 6px;
    left: 50%;
    transform: translateX(-50%);
}

.indicator {
    height: 6px;
    width: 6px;
    background: gray;
    border-radius: 6px;
}

.indicator.selected {
    background: white;
}

.arrows {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;
    display: flex;
    justify-content: space-between;
    padding: 0 1rem;
}

.arrows .arrow {
    width: 0.8rem;
    height: 2rem;
    background: rgb(206, 206, 206);
    mask-image: url("/images/backArrow.svg");
    mask-size: contain;
    mask-repeat: no-repeat;
    mask-position: center;
    cursor: pointer;
}

#rightArrow {
    transform: rotate(180deg);
}

#podium {
    width: 30%;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: left;
    gap: 1.5em;
}

#leaderboardContainer {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    margin: 5rem 0 10rem;
}

#podium>div::after {
    content: "";
    height: 5px;
    display: block;
    border-radius: 8px;
    background: var(--color-gradient);
    box-sizing: border-box;
    padding: 0 5px;
    position: absolute;
    bottom: -0.5em;
}

.podiumPosition {
    display: flex;
    position: relative;
    flex-direction: row;
    align-items: center;
    gap: 8px;
}

.podiumPfp {
    width: 2em;
    height: 2em;
    border-radius: 50%;
    object-fit: cover;
}

#podium>div p {
    margin: 0;

    min-width: 200px;
}

#firstPlace::after {
    width: 100%;
}

#secondPlace::after {
    width: var(--xp2);
}

#thirdPlace::after {
    width: var(--xp3);
}

#connexionBackButton {
    position: absolute;
    top: 1rem;
    left: 0;
    transition: filter 0.1s;
}

#connexionBackButton:hover {
    filter: brightness(0.9);
}

#connexionBackButton:hover::after {
    width: 0;
}

@keyframes slideOut {
    0% {
        transform: translateY(0);
    }

    70% {
        opacity: 1;
    }

    100% {
        transform: translateY(-50px);
        opacity: 0;
    }
}

#loginForm[data-shown="true"],
.registerForm {
    display: block;
    width: 330px;
    transition: all 0.3s;
}

#loginForm #error,
.registerForm #error {
    font-size: 0.8em;
    width: 100%;
    text-align: left;
    animation: slideOut 0.3s 3s forwards;
    z-index: 1;
    position: relative;
}

#loginForm input,
.registerForm input {
    position: relative;
    z-index: 2;
    font-family: "Inter", sans-serif;
    display: block;
    width: 100%;
    box-sizing: border-box;
    height: 3em;
    padding: 0.8em;
    border-radius: 8px;
    outline: none;
    color: var(--important-text-color);
}

#loginForm input:not(.button),
.registerForm input:not(.button) {
    border: 2px solid #616161;
    margin-bottom: 1em;
    background-color: var(--background-color);
}

#loginForm input:disabled,
#loginForm input.button:disabled {
    background: #616161 !important;
    cursor: default !important;
}

#loginPassword,
#registerPassword {
    margin-bottom: 0 !important;
}

#loginForm input.button,
.registerForm input.button {
    background: linear-gradient(270deg, #62f181, #5af0d4);
    border: none;
    color: black;
    font-weight: bold;
    font-size: 1em;
    cursor: pointer;
}

#compteCreation {
    font-size: 0.8em;
}

#compteCreation un {
    cursor: pointer;
}

un {
    text-decoration: underline;
}

.registerForm[data-shown="false"] {
    display: none;
}

#loginForm[data-shown="false"] {
    display: none;
}

#loginForm[data-shown="true"] {
    display: block;
}

#accountContainer {
    height: 100vh;
    width: 100%;
    display: flex;
    flex-direction: row;
    overflow: hidden;
}

#accountContainer #navbar {
    position: fixed;
    display: block;
    height: 100%;
    width: -moz-fit-content;
    width: fit-content;
    max-width: 210px;
    background-color: var(--background-color);
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#themeSwitcher {
    margin: auto 1rem 0;
    width: 70%;
    box-sizing: border-box;
    width: -moz-fit-content;
    width: fit-content;
    padding: 6px 9px;
    border-radius: 3px;
    border: none;
    font-weight: 500;
    background-color: var(--secondary-background-color);
    color: var(--important-text-color);
    cursor: pointer;
    transition: filter 0.1s;
    font-family: "Inter", sans-serif;
}

#themeSwitcher.headerButton {
    margin: 0 0 0 auto;
    width: fit-content;
}

#themeSwitcher:hover {
    filter: brightness(0.9);
}

#accountContainer #navbar a {
    padding: 0 1em;
    margin-bottom: 1rem;
    transition: color 90ms;
}

#accountContainer #navbar a.active {
    font-style: normal;
    background: var(--color-gradient);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent;
    background-clip: text;
}

#accountContainer #navbar a.active::after {
    width: 100%;
    background: var(--color-gradient);
}

#accountContainer #navbar a.retour {
    margin-bottom: 2rem;
}
/* ... */

